// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Title component 正确渲染大字 1`] = `
<body>
  <div>
    <p
      style="font-size: 2em; color: red;"
    >
      大字
    </p>
  </div>
</body>
`;

exports[`Title component 正确渲染小字 1`] = `
<body>
  <div>
    <p
      style="font-size: 0.5em; color: green;"
    >
      小字1
    </p>
  </div>
</body>
`;
